Commit check order modelstate

--- a/WebShopCase.Web/Scripts/app/views/signin.html
+++ b/WebShopCase.Web/Scripts/app/views/signin.html
@@ -23,6 +23,11 @@
                 data-style="expand-right">
                 <span class="ladda-label">Sign In</span>
             </a>
+
+            <a  href="#/register"
+                class="btn btn-success segoe-ui-light">
+                <span class="ladda-label">Register</span>
+            </a>
         </form>
     </div>
 </div>
